--- a/build.gradle
+++ b/build.gradle
@@ -88,6 +88,7 @@ dependencies {
     implementation 'de.hhu.bsinfo:dxutils:0.5.0-SNAPSHOT'
     implementation 'de.hhu.bsinfo:dxmem:0.5.0-SNAPSHOT'
     implementation 'de.hhu.bsinfo:dxnet:0.5.0-SNAPSHOT'
+    nativeApi 'de.hhu.bsinfo:dxutils:0.5.0-SNAPSHOT'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
