--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,6 @@ deploy:
   skip_cleanup: true
   file: build/libs/dxlog-${TRAVIS_TAG}.jar
   on:
-    repo: hhu-bsinfo/dxutils
+    repo: hhu-bsinfo/dxlog
     branch: master
     tags: true
