--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ version = '0.5.0' + (Boolean.valueOf(System.getProperty("snapshot")) ? "-SNAPSHO
 sourceCompatibility = '1.8'
 targetCompatibility = '1.8'
 
-mainClassName = 'de.hhu.bsinfo.dxlog.LogThroughputTester'
+mainClassName = 'de.hhu.bsinfo.dxlog.LogThroughputTest'
 
 // add log4j2 config path to default arguments of start script
 applicationDefaultJvmArgs = [
