--- a/.travis.yml
+++ b/.travis.yml
@@ -2,20 +2,20 @@ language: java
 install: true
 
 stages:
-  - name: build
-  - name: snapshot
-    if: branch = development
-  - name: release
-    if: branch = master
+- name: build
+- name: snapshot
+  if: branch = development
+- name: release
+  if: branch = master
 
 jobs:
   include:
-    - stage: build
-      script: ./gradlew build
-    - stage: snapshot
-      script: ./gradlew artifactoryPublish --exclude-task test -Dbintray.user=${BINTRAY_USER} -Dbintray.key=${BINTRAY_KEY} -Dbuild.number=${TRAVIS_BUILD_NUMBER}
-    - stage: release
-      script: ./gradlew bintrayUpload --exclude-task test -Drelease=true PbuildVariant=release -Dbintray.user=${BINTRAY_USER} -Dbintray.key=${BINTRAY_KEY} -Dbuild.number=${TRAVIS_BUILD_NUMBER}
+  - stage: build
+    script: ./gradlew build
+  - stage: snapshot
+    script: ./gradlew artifactoryPublish --exclude-task test -Dbintray.user=${BINTRAY_USER} -Dbintray.key=${BINTRAY_KEY} -Dbuild.number=${TRAVIS_BUILD_NUMBER}
+  - stage: release
+    script: ./gradlew bintrayUpload --exclude-task test -Drelease=true -PbuildVariant=release -Dbintray.user=${BINTRAY_USER} -Dbintray.key=${BINTRAY_KEY} -Dbuild.number=${TRAVIS_BUILD_NUMBER}
 
 deploy:
   provider: releases
